--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
                                 <div class="course">
                                     <div class="course-thumb">
                                         <img src="images/help/print.jpg" alt="Graphic Design" />
-                                        <img src="images/help/teacher3.jpg" class="teacher" alt="Michel" />
+                                        <!-- <img src="images/help/teacher3.jpg" class="teacher" alt="Michel" /> -->
                                         <div class="teacher-name">John Doe.</div>
                                         <div class="price-tag">$28.55</div>
                                     </div>
@@ -525,7 +525,7 @@
                                 <div class="course">
                                     <div class="course-thumb">
                                         <img src="images/help/web.jpg" alt="Graphic Design" />
-                                        <img src="images/help/teacher2.jpg" class="teacher" alt="Michel" />
+                                        <!-- <img src="images/help/teacher2.jpg" class="teacher" alt="Michel" /> -->
                                         <div class="teacher-name">John Doe.</div>
                                         <div class="price-tag">$28.55</div>
                                     </div>
@@ -543,7 +543,7 @@
                                 <div class="course">
                                     <div class="course-thumb">
                                         <img src="images/help/logo.jpg" alt="Graphic Design" />
-                                        <img src="images/help/teacher1.jpg" class="teacher" alt="Michel" />
+                                        <!-- <img src="images/help/teacher1.jpg" class="teacher" alt="Michel" /> -->
                                         <div class="teacher-name">John Doe.</div>
                                         <div class="price-tag">$28.55</div>
                                     </div>
@@ -565,7 +565,7 @@
                                 <div class="course">
                                     <div class="course-thumb">
                                         <img src="images/help/print.jpg" alt="Graphic Design" />
-                                        <img src="images/help/teacher3.jpg" class="teacher" alt="Michel" />
+                                        <!-- <img src="images/help/teacher3.jpg" class="teacher" alt="Michel" /> -->
                                         <div class="teacher-name">John Doe.</div>
                                         <div class="price-tag">$28.55</div>
                                     </div>
@@ -583,7 +583,7 @@
                                 <div class="course">
                                     <div class="course-thumb">
                                         <img src="images/help/web.jpg" alt="Graphic Design" />
-                                        <img src="images/help/teacher2.jpg" class="teacher" alt="Michel" />
+                                        <!-- <img src="images/help/teacher2.jpg" class="teacher" alt="Michel" /> -->
                                         <div class="teacher-name">John Doe.</div>
                                         <div class="price-tag">$28.55</div>
                                     </div>
@@ -601,7 +601,7 @@
                                 <div class="course">
                                     <div class="course-thumb">
                                         <img src="images/help/logo.jpg" alt="Graphic Design" />
-                                        <img src="images/help/teacher1.jpg" class="teacher" alt="Michel" />
+                                        <!-- <img src="images/help/teacher1.jpg" class="teacher" alt="Michel" /> -->
                                         <div class="teacher-name">John Doe.</div>
                                         <div class="price-tag">$28.55</div>
                                     </div>
@@ -623,7 +623,7 @@
                                 <div class="course">
                                     <div class="course-thumb">
                                         <img src="images/help/print.jpg" alt="Graphic Design" />
-                                        <img src="images/help/teacher3.jpg" class="teacher" alt="Michel" />
+                                        <!-- <img src="images/help/teacher3.jpg" class="teacher" alt="Michel" /> -->
                                         <div class="teacher-name">John Doe.</div>
                                         <div class="price-tag">$28.55</div>
                                     </div>
@@ -641,7 +641,7 @@
                                 <div class="course">
                                     <div class="course-thumb">
                                         <img src="images/help/web.jpg" alt="Graphic Design" />
-                                        <img src="images/help/teacher2.jpg" class="teacher" alt="Michel" />
+                                        <!-- <img src="images/help/teacher2.jpg" class="teacher" alt="Michel" /> -->
                                         <div class="teacher-name">John Doe.</div>
                                         <div class="price-tag">$28.55</div>
                                     </div>
@@ -659,7 +659,7 @@
                                 <div class="course">
                                     <div class="course-thumb">
                                         <img src="images/help/logo.jpg" alt="Graphic Design" />
-                                        <img src="images/help/teacher1.jpg" class="teacher" alt="Michel" />
+                                        <!-- <img src="images/help/teacher1.jpg" class="teacher" alt="Michel" /> -->
                                         <div class="teacher-name">John Doe.</div>
                                         <div class="price-tag">$28.55</div>
                                     </div>
@@ -681,7 +681,7 @@
                                 <div class="course">
                                     <div class="course-thumb">
                                         <img src="images/help/print.jpg" alt="Graphic Design" />
-                                        <img src="images/help/teacher3.jpg" class="teacher" alt="Michel" />
+                                        <!-- <img src="images/help/teacher3.jpg" class="teacher" alt="Michel" /> -->
                                         <div class="teacher-name">John Doe.</div>
                                         <div class="price-tag">$28.55</div>
                                     </div>
@@ -717,7 +717,7 @@
                                 <div class="course">
                                     <div class="course-thumb">
                                         <img src="images/help/logo.jpg" alt="Graphic Design" />
-                                        <img src="images/help/teacher1.jpg" class="teacher" alt="Michel" />
+                                        <!-- <img src="images/help/teacher1.jpg" class="teacher" alt="Michel" /> -->
                                         <div class="teacher-name">John Doe.</div>
                                         <div class="price-tag">$28.55</div>
                                     </div>
@@ -739,7 +739,7 @@
                                 <div class="course">
                                     <div class="course-thumb">
                                         <img src="images/help/print.jpg" alt="Graphic Design" />
-                                        <img src="images/help/teacher3.jpg" class="teacher" alt="Michel" />
+                                        <!-- <img src="images/help/teacher3.jpg" class="teacher" alt="Michel" /> -->
                                         <div class="teacher-name">John Doe.</div>
                                         <div class="price-tag">$28.55</div>
                                     </div>
@@ -757,7 +757,7 @@
                                 <div class="course">
                                     <div class="course-thumb">
                                         <img src="images/help/web.jpg" alt="Graphic Design" />
-                                        <img src="images/help/teacher2.jpg" class="teacher" alt="Michel" />
+                                        <!-- <img src="images/help/teacher2.jpg" class="teacher" alt="Michel" /> -->
                                         <div class="teacher-name">John Doe.</div>
                                         <div class="price-tag">$28.55</div>
                                     </div>
@@ -775,7 +775,7 @@
                                 <div class="course">
                                     <div class="course-thumb">
                                         <img src="images/help/logo.jpg" alt="Graphic Design" />
-                                        <img src="images/help/teacher1.jpg" class="teacher" alt="Michel" />
+                                        <!-- <img src="images/help/teacher1.jpg" class="teacher" alt="Michel" /> -->
                                         <div class="teacher-name">John Doe.</div>
                                         <div class="price-tag">$28.55</div>
                                     </div>
