--- a/courses.html
+++ b/courses.html
@@ -95,13 +95,22 @@
                         </div>
                       
                         <nav id="responsive-menu">
-                        	<ul class="menu text-right">
-                                <li><i class="fa fa-envelope"></i> ateeq@webfulcreations.com</li>
-                                <li><i class="fa fa-clock-o"></i> Mond-Fri: 09:00 - 17:00</li>
-                                <li class="first-social social"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li class="social"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li class="social"><a href="#"><i class="fa fa-instagram"></i></a></li>
-                                <li class="social"><a href="#"><i class="fa fa-google"></i></a></li>
+                            <ul class="menu vertical medium-horizontal float-right" data-responsive-menu="accordion medium-dropdown">
+                                <li><a href="index.html">Home Page</a></li>
+                                <li class="single-sub parent-nav"><a href="about-us.html"> Pages </a>
+                                    <ul class="child-nav menu vertical">
+                                        <li><a href="about-us.html">About Us</a></li>
+                                        <li><a href="faq.html">Faq's</a></li>
+                                        <li><a href="testimonials.html">Testimonials</a></li>
+                                        <li><a href="admission.html">Admission</a></li>
+                                    </ul>
+                                </li>
+                                <li><a href="courses.html">Courses</a></li>
+                                <li><a href="our-staff.html"> Our Staff</a></li>
+                                <li><a href="events.html">Events</a></li>
+                                <li><a href="shop.html">Shop</a></li>
+                                <li><a href="blog1.html">Blog</a></li>
+                                <li><a href="contact.html">Contact</a></li>
                             </ul>
                         </nav>
                     </div><!-- top-bar Ends -->
