--- a/single-post.html
+++ b/single-post.html
@@ -96,58 +96,19 @@
                       
                         <nav id="responsive-menu">
                         	<ul class="menu vertical medium-horizontal float-right" data-responsive-menu="accordion medium-dropdown">
-                                <li class="single-sub parent-nav"><a href="index.html">Home Page</a>
-                                    <ul class="child-nav menu vertical">
-                                        <li><a href="index.html">Home Version 1</a></li>
-                                        <li><a href="index2.html">Home Version 2</a></li>
-                                        <li><a href="header-style2.html">Header Style 2</a></li>
-                                        <li><a href="boxed.html">Boxed Layout</a></li>
-                                    </ul>
-                                </li>
+                                <li><a href="index.html">Home Page</a></li>
                                 <li class="single-sub parent-nav"><a href="about-us.html"> Pages </a>
                                     <ul class="child-nav menu vertical">
                                         <li><a href="about-us.html">About Us</a></li>
                                         <li><a href="faq.html">Faq's</a></li>
-                                        <li><a href="gallery.html">Gallery</a></li>
                                         <li><a href="testimonials.html">Testimonials</a></li>
-                                        <li><a href="price-list.html">Pricing List</a></li>
                                         <li><a href="admission.html">Admission</a></li>
-                                        <li><a href="404.html">404 Page</a></li>                                         
                                     </ul>
                                 </li>
-                                <li class="single-sub parent-nav"><a href="courses.html">Courses</a>
-                                    <ul class="child-nav menu vertical">
-                                    	<li><a href="courses.html">Courses</a></li>
-                                        <li><a href="single-course.html">Single Course</a></li>                                        
-                                    </ul>
-                                </li>
-                                <li class="single-sub parent-nav"><a href="our-staff.html"> Staff</a>
-                                    <ul class="child-nav menu vertical">
-                                    	<li><a href="our-staff.html">Our Staff</a></li>
-                                        <li><a href="single-teacher.html">Single Teacher</a></li>                                        
-                                    </ul>
-                                </li>
-                                <li class="single-sub parent-nav">
-                                	<a href="events.html">Events</a>
-                                    <ul class="child-nav menu vertical">
-                                        <li><a href="events.html">Events</a></li>
-                                        <li><a href="single-event.html">Single Event</a></li>
-                                    </ul>
-                                </li>
-                                <li class="single-sub parent-nav"><a href="shop.html">Shop</a>
-                               		<ul class="child-nav menu vertical"> 
-                               		    <li><a href="shop.html">Shop</a></li>
-                                        <li><a href="single-product.html">Single Product</a></li>
-                                        <li><a href="cart.html">Cart</a></li>
-                                        <li><a href="checkout.html">Checkout</a></li>
-                                     </ul>
-                                </li>
-                                <li class="single-sub parent-nav"><a href="blog1.html">Blog</a>
-                                    <ul class="child-nav menu vertical">
-                                        <li><a href="blog1.html">Blog </a></li>
-                                        <li><a href="single-post.html">Single Post</a></li>
-                                    </ul>
-                                </li>
+                                <li><a href="courses.html">Courses</a></li>
+                                <li><a href="our-staff.html"> Our Staff</a></li>
+                                <li><a href="events.html">Events</a></li>
+                                <li><a href="blog1.html">Blog</a></li>
                                 <li><a href="contact.html">Contact</a></li>
                             </ul>
                         </nav>
